--- a/production.ini
+++ b/production.ini
@@ -12,6 +12,8 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
+ming.pwcred.uri = $MONGOLAB_URI
+
 ###
 # wsgi server configuration
 ###
@@ -19,7 +21,7 @@ pyramid.default_locale_name = en
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
-port = 6543
+port = 8080
 
 ###
 # logging configuration
