--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,16 @@ Ming==0.3.2dev-20121219
 Paste==1.7.5.1
 PasteDeploy==1.5.0
 PasteScript==1.7.5
+PyYAML==3.10
 Pygments==1.5
 WebOb==1.2.3
 WebTest==1.4.3
 distribute==0.6.24
+docopt==0.5.0
+ipython==0.13.1
 mock==1.0.1
 nose==1.2.1
+path.py==2.4.1
 pycrypto==2.6
 pymongo==2.4.1
 pyramid==1.4
